Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60386

Don't wrap std::vector into a QVariant when passing it to a Q_INVOKABLE (same for signals and slots if feasible)

    XMLWordPrintable

Details

    Description

      Currently, any call of a Q_INVOKABLE taking a vector<int> or a QVector<int> or a QList<int> will wrap the container into a variant before doing the call. This seems highly undesirable for vector and quite unnecessary for the Qt containers. Teach the qv4qobjectwrapper CallArgument to pass such pointers to metacalls directly. That way a Q_INVOKABLE that takes a reference to such a container doesn't need to copy the container.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            villevoutilainen_qt Ville Voutilainen
            villevoutilainen_qt Ville Voutilainen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 4 days
                4d
                Remaining:
                Remaining Estimate - 4 days
                4d
                Logged:
                Time Spent - Not Specified
                Not Specified

                Gerrit Reviews

                  There are no open Gerrit changes