Don't wrap std::vector into a QVariant when passing it to a Q_INVOKABLE

Task-number: QTBUG-60386
Change-Id: Idd5a8939a575c254636042b5cb1900d2d8673072
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>